serialize: let's goooooooooooooooooooooooooooooo